# web-app-python-starter-kit

./: README.md
demo_app/: pyproject.toml
demo_app/src/: main.py
demo_app/tests/: test_main.py
